Modif de mises en pages, d'afichages console, et suppression du callback initMap

--- a/angular-front-end/src/index.html
+++ b/angular-front-end/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Importing GMaps API -->
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBkGS0Pjfa47LtPiuy1mtUF7BwFHzBHP3o&callback=initMap"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBkGS0Pjfa47LtPiuy1mtUF7BwFHzBHP3o"></script>
 
 </head>
 
