--- a/angular-front-end/src/index.html
+++ b/angular-front-end/src/index.html
@@ -9,6 +9,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
   <!-- Importing GMaps API -->
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBkGS0Pjfa47LtPiuy1mtUF7BwFHzBHP3o"></script>
