--- a/angular-front-end/src/index.html
+++ b/angular-front-end/src/index.html
@@ -14,7 +14,9 @@
 
   <!-- Importing GMaps API -->
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBkGS0Pjfa47LtPiuy1mtUF7BwFHzBHP3o"></script>
-
+  <script src="node_modules/chart.js/Chart.min.js"></script>
+  <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+  
 </head>
 
 <body>
